--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -23,3 +23,6 @@ monolog:
             handler: deprecation
             max_level: info
             channels: ["php"]
+        syslog_handler:
+            type: syslog
+            level: error
