--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+
 version: '3.4'
 
 services:
@@ -8,6 +9,9 @@ services:
       - './:/app'
     ports:
       - '8081:80'
+    networks:
+      default: {}
+      sf_monitoring: {}
 
   php:
     build:
@@ -18,6 +22,9 @@ services:
       - './:/app'
       - './docker/php/fpm.conf:/usr/local/etc/php-fpm.conf:ro'
       - './docker/php/php.ini:/usr/local/etc/php/php.ini:ro'
+    networks:
+      default: {}
+      sf_monitoring: {}
 
   mysql:
     image: mysql:5.7
@@ -31,3 +38,6 @@ services:
 volumes:
   db: {}
 
+networks:
+  sf_monitoring:
+    external: true
