--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -13,6 +13,10 @@ http {
     keepalive_timeout 120;
     server_tokens off;
 
+    log_format compression '$remote_addr - $remote_user [$time_local] '
+                           '"$request" $status $body_bytes_sent '
+                           '"$http_referer" "$http_user_agent" "$gzip_ratio"';
+
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
@@ -23,8 +27,12 @@ http {
     gzip_http_version 1.1;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
-    access_log /proc/self/fd/2;
-    error_log /proc/self/fd/2 warn;
+
+    #access_log /proc/self/fd/2;
+    #error_log /proc/self/fd/2 warn;
+
+    access_log syslog:server=fluentd:5140; 
+    error_log syslog:server=fluentd:5140; 
 
     resolver 127.0.0.11;
     resolver_timeout 3s;
